[package]
name = "client-cardano-database-v2"
description = "Mithril client Cardano database example"
version = "0.0.12"
authors = ["dev@iohk.io", "mithril-dev@iohk.io"]
documentation = "https://mithril.network/doc"
edition = "2021"
homepage = "https://mithril.network"
license = "Apache-2.0"
repository = "https://github.com/input-output-hk/mithril/"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
futures = "0.3.31"
indicatif = "0.18.0"
mithril-client = { path = "../../mithril-client", features = ["fs"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
