[package]
name = "client-cardano-stake-distribution"
description = "Mithril client cardano stake distribution example"
version = "0.1.1"
authors = ["dev@iohk.io", "mithril-dev@iohk.io"]
documentation = "https://mithril.network/doc"
edition = "2021"
homepage = "https://mithril.network"
license = "Apache-2.0"
repository = "https://github.com/input-output-hk/mithril/"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "env"] }
mithril-client = { path = "../../mithril-client", features = ["unstable"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
tokio = { version = "1.40.0", features = ["full"] }
