[package]
name = "client-cardano-transaction"
description = "Mithril client cardano-transaction example"
version = "0.1.18"
authors = ["dev@iohk.io", "mithril-dev@iohk.io"]
documentation = "https://mithril.network/doc"
edition = "2021"
homepage = "https://mithril.network"
license = "Apache-2.0"
repository = "https://github.com/input-output-hk/mithril/"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive", "env"] }
mithril-client = { path = "../../mithril-client" }
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
tokio = { version = "1.43.0", features = ["full"] }
