[package]
name = "client-mithril-stake-distribution"
description = "Mithril client stake distribution example"
version = "0.1.16"
authors = ["dev@iohk.io", "mithril-dev@iohk.io"]
documentation = "https://mithril.network/doc"
edition = "2021"
homepage = "https://mithril.network"
license = "Apache-2.0"
repository = "https://github.com/input-output-hk/mithril/"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["derive", "env"] }
mithril-client = { path = "../../mithril-client" }
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
tokio = { version = "1.40.0", features = ["full"] }
