[package]
name = "client-snapshot"
description = "Mithril client snapshot example"
version = "0.1.6"
authors = ["dev@iohk.io", "mithril-dev@iohk.io"]
documentation = "https://mithril.network/doc"
edition = "2021"
homepage = "https://mithril.network"
license = "Apache-2.0"
repository = "https://github.com/input-output-hk/mithril/"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
futures = "0.3.30"
indicatif = "0.17.7"
mithril-client = { path = "../../mithril-client", features = ["fs"] }
tokio = { version = "1.35.1", features = ["full"] }
