[package]
name = "mithril-aggregator-discovery"
description = "Mechanisms to discover aggregators available in a Mithril network."
version = "0.1.1"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
mithril-aggregator-client = { path = "../mithril-aggregator-client", version = "0.1" }
mithril-common = { path = "../../mithril-common", version = ">=0.6" }
rand = { version = "0.9.2" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }

[dev-dependencies]
httpmock = "0.8.2"
mockall = { workspace = true }
slog-async = { workspace = true }
slog-term = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
