[package]
name = "mithril-build-script"
version = "0.2.12"
description = "A toolbox for Mithril crates build scripts"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[dependencies]
semver = "1.0.23"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
