[package]
name = "mithril-build-script"
version = "0.2.21"
description = "A toolbox for Mithril crates build scripts"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[dependencies]
semver = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
