[package]
name = "mithril-build-script"
version = "0.2.29"
description = "A toolbox for Mithril crates build scripts"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[dependencies]
saphyr = "0.0.6"
semver = { workspace = true }
serde_json = { workspace = true }
