[package]
name = "mithril-cli-helper"
version = "0.0.3"
description = "An internal crate to provide tools for cli."
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[dependencies]
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }

#[dev-dependencies]
serde_json = "1.0.140"

[features]
default = []
