[package]
name = "mithril-cli-helper"
version = "0.0.8"
description = "An internal crate to provide tools for cli."
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[features]
default = []

[dependencies]
config = { workspace = true }
serde = { workspace = true }

#[dev-dependencies]
serde_json = { workspace = true }
