[package]
name = "mithril-dmq-node"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
blake2 = "0.10.6"
mithril-common = { path = "../../mithril-common" }
pallas-network = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true }